
=over

=item * Fields and subelements in the story, media and category profiles

=item * Keywords in the story, media and category profiles

=item * Categories in the story profile

=item * Output Channels in the story and media profiles

=item * Organizations in the source profile

=item * Add More sections in the User, Contributor, Media and Alert profiles

=back

=item *

Fields and subelements in the story and media profiles are displayed 
recursively, so a story's entire contents can be edited from one screen, as 
opposed to one screen per subelement as it was previously.

=item *

Error details (including oft-requested stack traces) are now viewable directly
from the 500 error page, instead of having to check the error_log or view the
error page's source.  To avoid scaring lay people, the details are only shown
(via Javascript) when the new "View Error Details" link is clicked.

=back

[Marshall, part of the Google Summer of Code 2006]

=back

=head2 Bug Fixes

=over

=item *

Moved the templates in F<comp/widgets/wrappers/sharky/> to 
F<comp/widgets/wrappers/> since "sharky" makes no sense. [Marshall]

=back

=head1 VERSION 1.10.2 "Summer" (2006-06-22)

=head2 Improvements

=over

=item *

Added the C<subelement_id> parameter to the story and media C<list()> methods.
[David]

=item *

Added placeholder for Japanese localization. Expect a translation soon!
[David]

=item *

The "codeselect" field's Perl code can now return an array of array references
or a hash reference, in addition to the previous support for an even-sized
array reference. [David]

=item *

Added a "Republish" checkbox and corresponding "Publish Checked" button to the
Story and Media "Find" pages for stories and media not currently in workflow
and to which the user has PUBLISH permission. Based on a patch from Serge
Sozonoff. [David]

=item *

Added tests for L<Bric::SOAP::Auth|Bric::SOAP::Auth>, although they haven't
yet been integrated into C<make devtest>. [Scott]

=item *
