@@ -63,6 +63,8 @@ The following items can now be edited on-the-fly (i.e. without reloading):
 
 =item * Add More sections in the User, Contributor, Media and Alert profiles
 
+=item * Roles in the contributor profile
+
 =back
 
 =item *
